--- a/src/config.json
+++ b/src/config.json
@@ -11,6 +11,10 @@
         },
         "mDAI": {
             "address" : "0x0165878A594ca255338adfa4d48449f69242Eb8F"
-        }
+        },
+        "explorerURL": "#"
+    },
+    "5": {
+        "explorerURL": "https://goerli.etherscan.io/"
     }
 }
